<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UofT GPA</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="help_screen_">"Help Screen "</string>
    <string name="calculator_screen">Calculator Screen</string>
    <string name="_1_">(1)</string>
    <string name="_2_">(2)</string>
    <string name="_3_">(3)</string>
    <string name="_4_">(4)</string>
    <string name="_5_">(5)</string>
    <string name="go_">Go!</string>
    <string name="clear_all">Clear All</string>
    <string name="percentage">Percentage</string>
    <string name="value">Value</string>
    <string name="_85_100">85-100</string>
    <string name="_80_84">80-84</string>
    <string name="_77_79">77-79</string>
    <string name="_73_76">73-76</string>
    <string name="_70_72">70-72</string>
    <string name="_67_69">67-69</string>
    <string name="_63_66">63-66</string>
    <string name="_60_62">60-62</string>
    <string name="_57_59">57-59</string>
    <string name="_53_56">53-56</string>
    <string name="_50_52">50-52</string>
    <string name="_0_49">0-49</string>
    <string name="_4_0">4.0</string>
    <string name="_3_7">3.7</string>
    <string name="_3_3">3.3</string>
    <string name="_3_0">3.0</string>
    <string name="_2_7">2.7</string>
    <string name="_2_3">2.3</string>
    <string name="_2_0">2.0</string>
    <string name="_0_0">0.0</string>
    <string name="_1_7">1.7</string>
    <string name="_1_3">1.3</string>
    <string name="_1_0">1.0</string>
    <string name="_0_7">0.7</string>
    <string name="reference_chart">Reference Chart</string>
    <string name="more_information">More Information</string>
    <string name="course_weight">Course Weight</string>
    <string name="course_grade">Course Grade</string>
    <string name="_0_5">0.5</string>
    <string name="textview">TextView</string>
    <string name="go">Go</string>
    <string name="your_mark_here">Your Mark Here</string>
    <string name="your_gpa_">"Your GPA "</string>
    <string name="your_gpa">Your GPA</string>

</resources>
